Showing list-items in popup.html.

--- a/popup.html
+++ b/popup.html
@@ -32,6 +32,9 @@
   <body>
     <div id="status"></div>
     <img id="image-result" hidden>
+
+    <div id="possible-usernames">
+    </div>
   </body>
 </html>
 
